--- a/about.html
+++ b/about.html
@@ -104,12 +104,12 @@
 
     <div class="column">
       <div class="card">
-        <img class="w3-animate-zoom" src="images/na.png" alt="Jane">
+        <img class="w3-animate-zoom" src="images/na.png" alt="Adam">
         <div class="container">
-          <h1>Jane Doe</h1>
-          <p class="h1">CEO &amp; Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <h1>Adam Pieroni</h1>
+          <p class="h1">Frontend Developerr</p>
+          <p>Computer Science Major at Old Dominion University in my senior year.  I currently work at CS Systems Group for ODU.  In my free time I enjoy playing video games and currently play for ODU Varsity Valorant.</p>
+          <p>apier006@odu.edu</p>
         </div>
       </div>
     </div>
