Added image and bio for David

--- a/about.html
+++ b/about.html
@@ -140,12 +140,11 @@
 
     <div class="column">
       <div class="card">
-        <img class="w3-animate-zoom" src="images/na.png" alt="Jane">
+        <img class="w3-animate-zoom" src="images/David.jpg" alt="David">
         <div class="container">
-          <h1>Jane Doe</h1>
-          <p class="h1">CEO &amp; Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <h1>David Jennings</h1>
+          <p class="h1">Developer</p>
+          <p>David is a senior at ODU working on their B.S. in Computer Science.  They are currently working as a developer for MSCorp.</p>
         </div>
       </div>
     </div>
