--- a/about.html
+++ b/about.html
@@ -130,9 +130,9 @@
       <div class="card">
         <img class="w3-animate-zoom" src="images/na.png" alt="Jane">
         <div class="container">
-          <h1>Jane Doe</h1>
-          <p class="h1">CEO &amp; Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <h1>Phillip Wilson</h1>
+          <p class="h1">Developer
+          <p>Phillip isna senior at Old Dominion University. He is working towards earning a Bechelor's Degree in Computer Science with a Minor in Cyber Security </p>
           <p>example@example.com</p>
         </div>
       </div>
