--- a/about.html
+++ b/about.html
@@ -132,8 +132,8 @@
         <div class="container">
           <h1>Phillip Wilson</h1>
           <p class="h1">Developer
-          <p>Phillip isna senior at Old Dominion University. He is working towards earning a Bechelor's Degree in Computer Science with a Minor in Cyber Security </p>
-          <p>example@example.com</p>
+          <p>Phillip is a senior at Old Dominion University. He is working towards earning a Bechelor's Degree in Computer Science with a Minor in Cyber Security </p>
+          <p>pwils008@odu.edu</p>
         </div>
       </div>
     </div>
