--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         <div class="container">
           <h1>Adam Pieroni</h1>
           <p class="h1">Frontend Developerr</p>
-          <p>Computer Science Major at Old Dominion University in my senior year.  I currently work at CS Systems Group for ODU.  In my free time I enjoy playing video games and currently play for ODU Varsity Valorant.</p>
+          <p>Adam is a Computer Science Major at Old Dominion University in his senior year.  He currently work at CS Systems Group for ODU.  In his free time he enjoys video games and currently plays for ODU Varsity Valorant.</p>
           
         </div>
       </div>
