placeholder for kelsey's bio

--- a/about.html
+++ b/about.html
@@ -70,9 +70,9 @@
       <div class="card">
         <img class="w3-animate-zoom" src="images/na.png" alt="John">
         <div class="container">
-          <h1>Jane Doe</h1>
-          <p class="h1">CEO &amp; Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <h1>Kelsey Marantan</h1>
+          <p class="h1">Developer</p>
+          <p>Kelsey is an Undergraduate Computer Science major graduating in May 2024.</p>
           
         </div>
       </div>
