kelsey's bio placeholder

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
         <div class="container">
           <h1>Kelsey Marantan</h1>
           <p class="h1">Developer</p>
-          <p>Kelsey is an Undergraduate Computer Science major graduating in May 2024.</p>
+          <p>Kelsey is an Undergraduate Computer Science Major graduating in May 2024.</p>
           
         </div>
       </div>
