--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
 
     <div class="column">
       <div class="card">
-        <img class="w3-animate-zoom" src="images/na.png" alt="Jane">
+        <img class="w3-animate-zoom" src="images/pw2.png" alt="Phillip">
         <div class="container">
           <h1>Phillip Wilson</h1>
           <p class="h1">Developer
