--- a/about.html
+++ b/about.html
@@ -118,9 +118,9 @@
       <div class="card">
         <img class="w3-animate-zoom" src="images/na.png" alt="Jane">
         <div class="container">
-          <h1>Jane Doe</h1>
-          <p class="h1">CEO &amp; Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <h1>William Varnier</h1>
+          <p class="h1">Developer</p>
+          <p>William is a senior at Old Dominion University who is studying Computer Science. In his free time he likes to write code and create code plugins.</p>
           
         </div>
       </div>
