--- a/about.html
+++ b/about.html
@@ -74,9 +74,9 @@ function w3_close() {
         <div class="card">
           <img class="w3-animate-zoom" src="images/na.png" alt="John">
           <div class="container">
-            <h1>Mike Ross</h1>
-            <p class="h1">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <h1>Chris Maguschak</h1>
+            <p class="h1">Designer</p>
+            <p>Under Construction</p>
           
           </div>
         </div>
@@ -86,9 +86,9 @@ function w3_close() {
         <div class="card">
           <img class="w3-animate-zoom" src="images/na.png" alt="John">
           <div class="container">
-            <h1>John Doe</h1>
+            <h1>Nia (Jodi) Newton</h1>
             <p class="h1">Designer</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>Under Constuction</p>
             
           </div>
         </div>
