--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@ function w3_close() {
 
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/pw2.png" alt="Phillip">
+          <img class="w3-animate-zoom" src="images/phillip.jpg" alt="Phillip">
           <div class="container">
             <h1>Phillip Wilson</h1>
             <p class="h1">Developer
