Embedded presentation on project page

--- a/project.html
+++ b/project.html
@@ -44,17 +44,7 @@
       </div>
     </header>
 
-    <h1> <div class="flip-box">
-  <div class="flip-box-inner">
-    <div class="flip-box-front">
-      <img src="images/na.png" alt="Paris" style="width:300px;height:200px">
-    </div>
-    <div class="flip-box-back">
-      <h2>Paris</h2>
-      <p>What an amazing city</p>
-    </div>
-  </div>
-  </div> </h1>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQr0_wzx9HEFo04WrSDP3BIUcPE6yTHs24V0qod6LkntgAPULcIeT6Ytun81XswFQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
