Added presentations page
Implemented the presentations page along with links to it on all other pages

--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
       <a href="project.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-user fa-fw w3-margin-right"></i>MCE</a>
       <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>About Us</a>
       <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Problem Statement</a>
-  <!-- sidebar links -->
+      <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
+      <!-- sidebar links -->
     </div>
   </nav>
 
