--- a/presentations.html
+++ b/presentations.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
   <meta charset="UTF-8">
-	<title>Problem Statement</title>
+	<title>Presentations</title>
 	<link href="monarchstd.css" rel="stylesheet">   <!-- Stylesheet link -->
 	<link href="stylesheet.css" rel="stylesheet"> <!-- Stylesheet link -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,39 +10,27 @@
 <body>
   <!-- Sidebar/menu -->
   <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-      <div class="w3-container">
-        <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
-          <i class="fa fa-remove"></i>
-        </a>
-        <img src="images/odu.png" style="width:100%;" class="w3-round"><br><br>
-        <h4><b><a href="header.html" onclick="w3_close()">Home</a></b></h4>
+    <div class="w3-container">
+      <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
+        <i class="fa fa-remove"></i>
+      </a>
+      <img src="images/odu.png" style="width:60%;" class="w3-round"><br><br>
+      <h4><b><a href="header.html" onclick="w3_close()">Home</a></b></h4>
 
-        <p class="w3-text-grey"></p>
-      </div>
-      <div class="w3-bar-block">
-        <a href="project.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-user fa-fw w3-margin-right"></i>MCE</a>
-        <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>About Us</a>
-        <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Problem Statement</a>
-        <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
-        <!-- sidebar links -->
-      </div>
+      <p class="w3-text-grey"></p>
+    </div>
+    <div class="w3-bar-block">
+      <a href="project.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-user fa-fw w3-margin-right"></i>MCE</a>
+      <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>About Us</a>
+      <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Problem Statement</a>
+      <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
+      <!-- sidebar links -->
+
+    </div>
   </nav>
 
   <!-- Overlay effect when opening sidebar on small screens -->
   <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
-
-  <script>
-  // Script to open and close sidebar
-  function w3_open() {
-      document.getElementById("mySidebar").style.display = "block";
-      document.getElementById("myOverlay").style.display = "block";
-  }
-
-  function w3_close() {
-      document.getElementById("mySidebar").style.display = "none";
-      document.getElementById("myOverlay").style.display = "none";
-  }
-  </script>
 
   <!-- !PAGE CONTENT! -->
   <div class="w3-main" style="margin-left:300px">
@@ -51,16 +39,16 @@
     <header id="portfolio">
       <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
       <div class="w3-container">
-      <h1><b>Problem Statement</b></h1>
+      <h1><b>Presentations</b></h1>
       <div class="w3-section w3-bottombar w3-padding-16">
       </div>
       </div>
-
     </header>
 
-    <p>ODU is missing a centralized platform that offers comprehensive and well managed information on courses such as student feedback, syllabi and student evaluations. This data is needed to assist students in making well informed decisions when registering for courses.</p>
+    <h3>Feasibility Presentation</h3>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQr0_wzx9HEFo04WrSDP3BIUcPE6yTHs24V0qod6LkntgAPULcIeT6Ytun81XswFQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
-    <!-- Footer -->
+  <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
     <div class="w3-row-padding">
       <div class="w3-third">
@@ -94,5 +82,8 @@
     
     </div>
   </footer>
+    
+  <!-- End page content -->
+  </div>
 </body>
 </html>
