--- a/project.html
+++ b/project.html
@@ -45,7 +45,7 @@
       </div>
     </header>
 
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQr0_wzx9HEFo04WrSDP3BIUcPE6yTHs24V0qod6LkntgAPULcIeT6Ytun81XswFQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <p>Monarch Course Explorer is a moderated platform where students can upload syllabi from their ODU courses. Students can provide and view feedback about their courses, and view automatic comparisons between semester and teacher.</p>
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
