Added Chris's picture

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@ function w3_close() {
     <div class="row">
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/na.png" alt="John">
+          <img class="w3-animate-zoom" src="images/na.png" alt="Kelsey">
           <div class="container">
             <h1>Kelsey Marantan</h1>
             <p class="h1">Developer</p>
@@ -73,7 +73,7 @@ function w3_close() {
 
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/na.png" alt="John">
+          <img class="w3-animate-zoom" src="images/chris.jpg" alt="Chris">
           <div class="container">
             <h1>Chris Maguschak</h1>
             <p class="h1">Designer</p>
@@ -85,7 +85,7 @@ function w3_close() {
 
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/na.png" alt="John">
+          <img class="w3-animate-zoom" src="images/na.png" alt="Jodi">
           <div class="container">
             <h1>Nia (Jodi) Newton</h1>
             <p class="h1">Designer</p>
