--- a/solution.html
+++ b/solution.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-	<title>Presentations</title>
+	<title>Solution</title>
 	<link href="monarchstd.css" rel="stylesheet">   <!-- Stylesheet link -->
 	<link href="stylesheet.css" rel="stylesheet"> <!-- Stylesheet link -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
       <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
         <i class="fa fa-remove"></i>
       </a>
-      <img src="images/odu.png" style="width:60%;" class="w3-round"><br><br>
+      <img src="images/odu.png" style="width:100%;" class="w3-round"><br><br>
       <h4><b><a href="header.html" onclick="w3_close()">Home</a></b></h4>
 
       <p class="w3-text-grey"></p>
@@ -23,10 +23,9 @@
       <a href="project.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-user fa-fw w3-margin-right"></i>MCE</a>
       <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>About Us</a>
       <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Problem Statement</a>
-      <a href="solution.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Solution</a>
-      <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
+      <a href="solution.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Solution</a>
+      <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
       <!-- sidebar links -->
-
     </div>
   </nav>
 
@@ -36,18 +35,26 @@
   <!-- !PAGE CONTENT! -->
   <div class="w3-main" style="margin-left:300px">
 
-    <!-- Header -->
-    <header id="portfolio">
-      <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
-      <div class="w3-container">
-      <h1><b>Presentations</b></h1>
-      <div class="w3-section w3-bottombar w3-padding-16">
-      </div>
-      </div>
-    </header>
+  <!-- Header -->
+  <header id="portfolio">
+    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+    <div class="w3-container">
+    <h1><b>Solution</b></h1>
+    <div class="w3-section w3-bottombar w3-padding-16">
+    </div>
+    </div>
+  </header>
 
-    <h3>Feasibility Presentation</h3>
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQr0_wzx9HEFo04WrSDP3BIUcPE6yTHs24V0qod6LkntgAPULcIeT6Ytun81XswFQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <h3>Solution Statement</h3>
+  <p>Monarch Course Explorer is a moderated platform where students can upload syllabi from their ODU courses. Students can provide and view feedback about their courses, and view automatic comparisons between semester and teacher.</p>
+  <h3>Solution Characteristics</h3>
+  <ul>
+    <li>A moderated platform where students can upload syllabi from their selected courses at ODU to be accessed by peers.</li>
+    <li>Important: According to George Washington University Editorial: “Syllabi are crucial for students to build their day-to-day schedules” not having one available can “force students into more unpredictable lives” (Anderson and Chinowsky. 2020)</li>
+    <li>Ohio State University has an online syllabi system that aids students in gauging if the course if right for their schedule. This gives the student more assurance in their course choices (Cartwright. 2016)</li>
+    <li>Students can provide and view constructive feedback about their courses (specified by semester and faculty). </li>
+    <li>Faculty can view and comment on the feedback given by students</li>
+  </ul>
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
@@ -83,7 +90,6 @@
     
     </div>
   </footer>
-    
   <!-- End page content -->
   </div>
 </body>
