--- a/presentations.html
+++ b/presentations.html
@@ -51,7 +51,8 @@
     
 
     <h3> Revised Feasibility Presentation</h3>
-    
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR9zCePVKpzcQWvIqPGiBZMlrAfa4WcijrzG3_Fu0LRx3Aw6u92mikmVI_3oK5CbQ/embed?start=true&loop=true&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
     <div class="w3-row-padding">
