--- a/project.html
+++ b/project.html
@@ -25,7 +25,8 @@
       <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Problem Statement</a>
       <a href="solution.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Solution</a>
       <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
-  <!-- sidebar links -->
+      <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
+      <!-- sidebar links -->
 
     </div>
   </nav>
