Add Kelsey's Photo to Bio

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@ function w3_close() {
     <div class="row">
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/na.png" alt="Kelsey">
+          <img class="w3-animate-zoom" src="images/KelseyM.jpg" alt="Kelsey">
           <div class="container">
             <h1>Kelsey Marantan</h1>
             <p class="h1">Developer</p>
