Updated Adam and Jodi's Bio

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ function w3_close() {
           <div class="container">
             <h1>Chris Maguschak</h1>
             <p class="h1">Designer</p>
-            <p>Under Construction</p>
+            <p>Chris is a student at Old Dominion University</p>
           
           </div>
         </div>
@@ -87,11 +87,11 @@ function w3_close() {
 
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/na.png" alt="Jodi">
+          <img class="w3-animate-zoom" src="images/JodiN.jpg" alt="Jodi">
           <div class="container">
             <h1>Nia (Jodi) Newton</h1>
             <p class="h1">Designer</p>
-            <p>Under Constuction</p>
+            <p>Nia is a student at Old Dominion University</p>
             
           </div>
         </div>
@@ -99,7 +99,7 @@ function w3_close() {
 
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/na.png" alt="Adam">
+          <img class="w3-animate-zoom" src="images/AdamP.jpg" alt="Adam">
           <div class="container">
             <h1>Adam Pieroni</h1>
             <p class="h1">Frontend Developerr</p>
