Update Jodi and Chris' bio info

--- a/about.html
+++ b/about.html
@@ -78,8 +78,8 @@ function w3_close() {
           <img class="w3-animate-zoom" src="images/chris.jpg" alt="Chris">
           <div class="container">
             <h1>Chris Maguschak</h1>
-            <p class="h1">Designer</p>
-            <p>Chris is a student at Old Dominion University</p>
+            <p class="h1">Developer</p>
+            <p>Chris holds an Associate Degree in computer science an is currently pursuing his Bachelor's Degree at Old Dominion University with a Minor in Mathematics</p>
           
           </div>
         </div>
@@ -90,8 +90,8 @@ function w3_close() {
           <img class="w3-animate-zoom" src="images/JodiN.jpg" alt="Jodi">
           <div class="container">
             <h1>Nia (Jodi) Newton</h1>
-            <p class="h1">Designer</p>
-            <p>Nia is a student at Old Dominion University</p>
+            <p class="h1">Developer</p>
+            <p>Nia is a senior at Old Dominion University pursuing her Bachelor's Degree in computer science.In her freetime she likes to eating and watching movies. </p>
             
           </div>
         </div>
