Fix Typos from last update

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ function w3_close() {
           <div class="container">
             <h1>Chris Maguschak</h1>
             <p class="h1">Developer</p>
-            <p>Chris holds an Associate Degree in computer science an is currently pursuing his Bachelor's Degree at Old Dominion University with a Minor in Mathematics</p>
+            <p>Chris holds an Associate Degree in computer science an is currently pursuing his Bachelor's Degree at Old Dominion University with a Minor in Mathematics.</p>
           
           </div>
         </div>
@@ -91,7 +91,7 @@ function w3_close() {
           <div class="container">
             <h1>Nia (Jodi) Newton</h1>
             <p class="h1">Developer</p>
-            <p>Nia is a senior at Old Dominion University pursuing her Bachelor's Degree in computer science.In her freetime she likes to eating and watching movies. </p>
+            <p>Nia is a senior at Old Dominion University pursuing her Bachelor's Degree in computer science.In her freetime she likes eating and watching movies. </p>
             
           </div>
         </div>
