Update New Members

--- a/about.html
+++ b/about.html
@@ -75,11 +75,11 @@ function w3_close() {
 
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/chris.jpg" alt="Chris">
+          <img class="w3-animate-zoom" src=" " alt="Alex">
           <div class="container">
-            <h1>Chris Maguschak</h1>
+            <h1>Alex Brown</h1>
             <p class="h1">Developer</p>
-            <p>Chris holds an Associate Degree in computer science an is currently pursuing his Bachelor's Degree at Old Dominion University with a Minor in Mathematics.</p>
+            <p>Alex is a new member to team Silver. His Bio is currently under construction</p>
           
           </div>
         </div>
@@ -140,6 +140,18 @@ function w3_close() {
             <h1>David Jennings</h1>
             <p class="h1">Developer</p>
             <p>David is a senior at ODU working on their B.S. in Computer Science.  They are currently working as a developer for MSCorp.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img class="w3-animate-zoom" src=" " alt="Kevin">
+          <div class="container">
+            <h1>Kevin Carr</h1>
+            <p class="h1">Developer</p>
+            <p>Kevin is a new member to team Silver. His Bio is currently under construction</p>
+          
           </div>
         </div>
       </div>
