Update Alex's Bio

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ function w3_close() {
           <div class="container">
             <h1>Alex Brown</h1>
             <p class="h1">Developer</p>
-            <p>Alex is a new member to team Silver. His Bio is currently under construction</p>
+            <p>Alex is an undergraduate at Old Dominion University majoring in Computer Science. He currently works as a Sonar Support Technician and anticpates graduating in Summer 2024</p>
           
           </div>
         </div>
