Update Alex's Bio picture

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@ function w3_close() {
 
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/na.png " alt="Alex">
+          <img class="w3-animate-zoom" src="images/Alex.jpg " alt="Alex">
           <div class="container">
             <h1>Alex Brown</h1>
             <p class="h1">Developer</p>
