Update Kevin's Bio

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@ function w3_close() {
           <div class="container">
             <h1>Nia (Jodi) Newton</h1>
             <p class="h1">Developer</p>
-            <p>Nia is a senior at Old Dominion University pursuing her Bachelor's Degree in computer science.In her freetime she likes eating and watching movies. </p>
+            <p>Nia is a senior at Old Dominion University pursuing her Bachelor's Degree in computer science. In her freetime she likes eating and watching movies. </p>
             
           </div>
         </div>
@@ -150,7 +150,7 @@ function w3_close() {
           <div class="container">
             <h1>Kevin Carr</h1>
             <p class="h1">Developer</p>
-            <p>Kevin is a new member to team Silver. His Bio is currently under construction</p>
+            <p>Kevin is a senior transfer student at Old Dominion University majoring in Computer Science. After graduating in December 2023, he plans to pursue career opportunities in the IT field.</p>
           
           </div>
         </div>
