--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@ function w3_close() {
 
       <div class="column">
         <div class="card">
-          <img class="w3-animate-zoom" src="images/na.png " alt="Kevin">
+          <img class="w3-animate-zoom" src="images/Kevin.jpg " alt="Kevin">
           <div class="container">
             <h1>Kevin Carr</h1>
             <p class="h1">Developer</p>
