--- a/labs.html
+++ b/labs.html
@@ -50,7 +50,7 @@
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
