--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@ function w3_close() {
           <div class="container">
             <h1>Adam Pieroni</h1>
             <p class="h1">Frontend Developerr</p>
-            <p>Adam is a Computer Science Major at Old Dominion University in his senior year.  He currently work at CS Systems Group for ODU.  In his free time he enjoys video games and currently plays for ODU Varsity Valorant.</p>
+            <p>Adam is a Computer Science Major at Old Dominion University in his senior year.  He currently work at CS Systems Group for ODU.  In his free time he enjoys video games and recently played for ODU Varsity Valorant.</p>
             
           </div>
         </div>
