--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ function w3_close() {
     <header id="portfolio">
       <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
       <div class="w3-container">
-      <h1><b>Spring 2023 Silver Team</b></h1>
+      <h1><b>Fall 2023 Silver Team</b></h1>
       <div class="w3-section w3-bottombar w3-padding-16">
       </div>
       </div>
