--- a/header.html
+++ b/header.html
@@ -28,11 +28,14 @@
       <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
       <!-- sidebar links -->
     </div>
-  </nav>
-
+  </nav>	
+  	
+  <!-- Let me see if commenting out this overlay effect on mobile small screens will permanently dispaly the sidebar on mobile -->
   <!-- Overlay effect when opening sidebar on small screens -->
+  <!--	
   <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
-
+  -->
+	
   <!-- !PAGE CONTENT! -->
   <div class="w3-main" style="margin-left:300px">
 
