--- a/header.html
+++ b/header.html
@@ -30,8 +30,11 @@
     </div>
   </nav>
 
+  <!-- Let me see if commenting out this overlay effect on mobile small screens will permanently dispaly the sidebar on mobile -->
   <!-- Overlay effect when opening sidebar on small screens -->
+  <!--	
   <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+  -->
 
   <!-- !PAGE CONTENT! -->
   <div class="w3-main" style="margin-left:300px">
