--- a/header.html
+++ b/header.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <!-- Sidebar/menu -->
+  <!-- Would removing w3-collapse and w3-animate-left fix the mobile problem	
   <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+  -->
+  <nav class="w3-sidebar w3-white" style="z-index:3;width:300px;" id="mySid	
     <div class="w3-container">
       <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
         <i class="fa fa-remove"></i>
@@ -28,14 +31,14 @@
       <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
       <!-- sidebar links -->
     </div>
-  </nav>
-
+  </nav>	
+  	
   <!-- Let me see if commenting out this overlay effect on mobile small screens will permanently dispaly the sidebar on mobile -->
   <!-- Overlay effect when opening sidebar on small screens -->
   <!--	
   <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
   -->
-
+	
   <!-- !PAGE CONTENT! -->
   <div class="w3-main" style="margin-left:300px">
 
