--- a/header.html
+++ b/header.html
@@ -12,14 +12,13 @@
   <!-- Would removing w3-collapse and w3-animate-left fix the mobile problem	
   <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   -->
-  <nav class="w3-sidebar w3-white" style="z-index:3;width:300px;" id="mySid	
+  <nav class="w3-sidebar w3-white" style="z-index:3;width:25%;" id="mySid	
     <div class="w3-container">
       <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
         <i class="fa fa-remove"></i>
-      </a>
-      <img src="images/odu.png" style="width:100%;" class="w3-round"><br><br>
+      </a>	
+      <img src="images/odu.png" style="width:100%;" class="w3-round"><br><br>	  
       <h4><b><a href="header.html" onclick="w3_close()">Home</a></b></h4>
-
       <p class="w3-text-grey"></p>
     </div>
     <div class="w3-bar-block">
