--- a/header.html
+++ b/header.html
@@ -39,6 +39,7 @@
   <!--	
   <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
   -->
+  <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 	
   <!-- !PAGE CONTENT! -->
   <div class="w3-main" style="margin-left:300px">
