--- a/header.html
+++ b/header.html
@@ -48,7 +48,7 @@
   <header id="portfolio">
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <!-- Button that displays on mobile screen less than 993px wide-->
-    <button class="w3-button w3-teal w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
+    <button class="w3-button w3-grey w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
     <div class="w3-container">
     <h1><b>Monarch Course Explorer</b></h1>
     <div class="w3-section w3-bottombar w3-padding-16">
