--- a/problem.html
+++ b/problem.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <!-- Sidebar/menu -->
-  <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+  <div class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
+      <!-- Button class for button inside sidebar -->
+      <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>  
       <div class="w3-container">
         <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
           <i class="fa fa-remove"></i>
@@ -28,11 +30,12 @@
         <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
         <!-- sidebar links -->
       </div>
-  </nav>
+  </div>
 
   <!-- Overlay effect when opening sidebar on small screens -->
   <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
+  <!--
   <script>
   // Script to open and close sidebar
   function w3_open() {
@@ -45,6 +48,7 @@
       document.getElementById("myOverlay").style.display = "none";
   }
   </script>
+  -->
 
   <!-- !PAGE CONTENT! -->
   <div class="w3-main" style="margin-left:300px">
@@ -52,6 +56,8 @@
     <!-- Header -->
     <header id="portfolio">
       <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+      <!-- Button that displays on mobile screen less than 993px wide-->
+      <button class="w3-button w3-grey w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>    
       <div class="w3-container">
       <h1><b>Problem Statement</b></h1>
       <div class="w3-section w3-bottombar w3-padding-16">
@@ -96,5 +102,15 @@
     
     </div>
   </footer>
+<!-- Button functions -->
+<script>
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
 </body>
 </html>
