--- a/prototype.html
+++ b/prototype.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-	<title>Labs</title>
+	<title>Prototype</title>
 	<link href="monarchstd.css" rel="stylesheet">   <!-- Stylesheet link -->
 	<link href="stylesheet.css" rel="stylesheet"> <!-- Stylesheet link -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,13 +10,13 @@
 <body>
   <!-- Sidebar/menu -->
   <div class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-  <!-- Button class for button inside sidebar -->
-    <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
+    <!-- Button class for button inside sidebar -->
+    <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>  
     <div class="w3-container">
       <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
         <i class="fa fa-remove"></i>
       </a>
-      <img src="images/odu.png" style="width:100%;" class="w3-round"><br><br>
+      <img src="images/odu.png" style="width:60%;" class="w3-round"><br><br>
       <h4><b><a href="header.html" onclick="w3_close()">Home</a></b></h4>
 
       <p class="w3-text-grey"></p>
@@ -27,9 +27,10 @@
       <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Problem Statement</a>
       <a href="solution.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Solution</a>
       <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
-      <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
-      <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a>
+      <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
+      <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a>
       <!-- sidebar links -->
+
     </div>
   </div>
 
@@ -39,23 +40,17 @@
   <!-- !PAGE CONTENT! -->
   <div class="w3-main" style="margin-left:300px">
 
-  <!-- Header -->
-  <header id="portfolio">
-    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
-    <!-- Button that displays on mobile screen less than 993px wide-->
-    <button class="w3-button w3-grey w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
-    <div class="w3-container">
-    <h1><b>Labs</b></h1>
-    <div class="w3-section w3-bottombar w3-padding-16">
-    </div>
-    </div>
-  </header>
-
-  <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
-
-  <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
+    <!-- Header -->
+    <header id="portfolio">
+      <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+      <!-- Button that displays on mobile screen less than 993px wide-->
+      <button class="w3-button w3-grey w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
+      <div class="w3-container">
+      <h1><b>Prototype</b></h1>
+      <div class="w3-section w3-bottombar w3-padding-16">
+      </div>
+      </div>
+    </header>
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
@@ -91,6 +86,7 @@
     
     </div>
   </footer>
+    
   <!-- End page content -->
   </div>
 <!-- Button functions -->
@@ -102,6 +98,6 @@ function w3_open() {
 function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
 }
-</script>	
+</script>
 </body>
 </html>
