--- a/labs.html
+++ b/labs.html
@@ -57,6 +57,13 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
 
+  <h3>Lab 3 & 4 - User Manual</h3>
+  <iframe src="https://github.com/MonarchCourseExplorer/Prototype/wiki/pub?embedded-true" frameborder="0" width="960" height="569" ></iframe>  
+
+  <!--	  
+  <iframe src="https://USERNAME.github.io/RESPOSITORY" width="100%" height="400" frameborder="0" scrolling="no"></iframe>	  
+  -->
+	  
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
     <div class="w3-row-padding">
@@ -87,8 +94,7 @@
           <span class="w3-tag w3-grey w3-small w3-margin-bottom"></span> <span class="w3-tag w3-grey w3-small w3-margin-bottom"></span> <span class="w3-tag w3-grey w3-small w3-margin-bottom"></span>
           <span class="w3-tag w3-grey w3-small w3-margin-bottom"></span> <span class="w3-tag w3-grey w3-small w3-margin-bottom"></span>
         </p>
-      </div>
-    
+      </div>	    
     </div>
   </footer>
   <!-- End page content -->
