--- a/labs.html
+++ b/labs.html
@@ -58,10 +58,14 @@
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
 
   <h3>Lab 3 & 4 - User Manual</h3>
-  <iframe src="https://github.com/MonarchCourseExplorer/Prototype/wiki/pub?embedded-true" frameborder="0" width="960" height="569" ></iframe>  
+  <iframe src="https://github.com/MonarchCourseExplorer/Prototype/wiki/" frameborder="0" width="960" height="569" ></iframe>  
+  	  
+  <!--
+  from google	  
+  <iframe src="https://github.com/MonarchCourseExplorer/Prototype/wiki/" frameborder="0" width="960" height="569" ></iframe>
 
-  <!--	  
-  <iframe src="https://USERNAME.github.io/RESPOSITORY" width="100%" height="400" frameborder="0" scrolling="no"></iframe>	  
+  from https://handsondataviz.org/gh-pages-link-to-iframe.html	  
+  <iframe src="https://USERNAME.github.io/RESPOSITORY" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
   -->
 	  
   <!-- Footer -->
