--- a/labs.html
+++ b/labs.html
@@ -58,7 +58,7 @@
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
 
   <h3>Lab 3 & 4 - User Manual</h3>
-  <iframe src="https://github.com/MonarchCourseExplorer/Prototype/wiki/" frameborder="0" width="960" height="569" ></iframe>  
+  <h4><a href>https://github.com/MonarchCourseExplorer/Prototype/wiki/</a></h4>
   	  
   <!--
   from google	  
