--- a/presentations.html
+++ b/presentations.html
@@ -67,6 +67,16 @@
     <h3> CS 411 Prototype Design Presentation</h3>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSt49M0AZfI3lX19L4x_VpEB_2dmloGPVCkgKKg2ETsXXVw04TEQ5elhfCIvg9l1w/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
+    <h3> CS 411 Prototype Demo 1 (Informal Discussion) Presentation </h3>
+    <iframe src="https://docs.google.com/presentation/d/1gpQBKtZ2QjJSQUhO6IXFBtF2Io5MqTQm/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+    <h3> CS 411 Prototype Demo 2 (Discussion) Presentation </h3> 
+    <iframe src="https://docs.google.com/presentation/d/1GRnjsJNv4IBAsbCeu8keAtHNnBxNOUAJ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+    <h3> CS 411 Final Prototype Presentation Presentation </h3> 
+    <iframe src="https://docs.google.com/presentation/d/1DLEFeDCYdYVzsUq1ariy0bPx-yj_eoP5JU1Ac4yEp5Q/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+ 
+	  
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
     <div class="w3-row-padding">
