--- a/labs.html
+++ b/labs.html
@@ -57,6 +57,12 @@
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
 
+  <h3>Lab 2 - Section 3 v1</h3>
+  <iframe src="https://docs.google.com/document/d/1y6jDIZ0RX0WTMbg12ZW1XQzCbNDjzdFb/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <h3>Lab 2 - Section 3 v2</h3>
+  <iframe src="https://docs.google.com/document/d/15jYrlla6pjlcr9SiJWj79s5vjL0jhwb6wCgm3_KAT1E/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+	  
   <h3>Lab 3 & 4 - User Manual</h3>
   <h4><a href="https://github.com/MonarchCourseExplorer/Prototype/wiki/" target="_blank">User Manual - Lab 3 & 4</a></h4>
   	  
