--- a/solution.html
+++ b/solution.html
@@ -29,6 +29,7 @@
       <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
       <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
       <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a>
+      <a href="individual.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Individual</a>
       <!-- sidebar links -->
     </div>
   </nav>
