--- a/individual.html
+++ b/individual.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-	<title>Individual Submissions</title>
+	<title>Individual</title>
 	<link href="monarchstd.css" rel="stylesheet">   <!-- Stylesheet link -->
 	<link href="stylesheet.css" rel="stylesheet"> <!-- Stylesheet link -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
