--- a/individual.html
+++ b/individual.html
@@ -52,7 +52,7 @@
     <!-- Button that displays on mobile screen less than 993px wide-->
     <button class="w3-button w3-grey w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
     <div class="w3-container">
-    <h1><b>Monarch Course Explorer</b></h1>
+    <h1><b>Individual Submissions</b></h1>
     <div class="w3-section w3-bottombar w3-padding-16">
     </div>
     </div>
