--- a/individual.html
+++ b/individual.html
@@ -58,7 +58,15 @@
     </div>
   </header>
 
-   <!-- Empty Body for this webpage -->	  
+<!-- Going to put the list here -->	  
+  <h3>Solution Characteristics</h3>
+  <ul>
+    <li>A moderated platform where students can upload syllabi from their selected courses at ODU to be accessed by peers.</li>
+    <li>Important: According to George Washington University Editorial: “Syllabi are crucial for students to build their day-to-day schedules” not having one available can “force students into more unpredictable lives” (Anderson and Chinowsky. 2020)</li>
+    <li>Ohio State University has an online syllabi system that aids students in gauging if the course if right for their schedule. This gives the student more assurance in their course choices (Cartwright. 2016)</li>
+    <li>Students can provide and view constructive feedback about their courses (specified by semester and faculty). </li>
+    <li>Faculty can view and comment on the feedback given by students</li>
+  </ul>
 	  
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
