--- a/labs.html
+++ b/labs.html
@@ -64,7 +64,7 @@
 
   <!-- The way with iframes -->
   <h3>Lab 2 - Section 3 v1</h3>
-  <h4><a href="https://docs.google.com/document/d/e/1y6jDIZ0RX0WTMbg12ZW1XQzCbNDjzdFb/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true"></iframe>
 
   <!-- 
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
