--- a/labs.html
+++ b/labs.html
@@ -56,15 +56,11 @@
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <!-- The way I have it -->	  
+  <!-- The way with iframes, publish with in google docs. File, share, publish to web, embed -->
   <h3>Lab 2 - Section 3 v1</h3>
-  <h4><a href="https://docs.google.com/document/d/1y6jDIZ0RX0WTMbg12ZW1XQzCbNDjzdFb/edit?usp=sharing&ouid=110234151760354191180&rtpof=true&sd=true">Lab 2 - Section 3 v1</a></h4>
-
-  <!-- The way with iframes -->
-  <h3>Lab 2 - Section 3 v1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
   <!-- 
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
