--- a/labs.html
+++ b/labs.html
@@ -52,25 +52,30 @@
     </div>
   </header>
 
+  <!-- The way with iframes, publish with in google docs. File, share, publish to web, embed -->
   <h3>Lab 1 Version 1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
   <h3>Lab 1 Version 2</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
-
-  <!-- The way with iframes, publish with in google docs. File, share, publish to web, embed -->
+  
   <h3>Lab 2 - Section 3 v1</h3>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vS0BT6VTHi_4uO5V8ToeDqASDVN21i5vOmzvs83KlS4ajEvA2DH7t29zjGnuFVEmw/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
 
-  <!-- 
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vT108uRy0Zg0krULKhW-MbN42aYTVPW9iR0DqMdrcqT1htOB1E9kfXL6lRUZoAYng/pub?embedded=true" frameborder="0" width="960" height="569" ></iframe>
-  -->	  
-
   <h3>Lab 2 - Section 3 v2</h3>
-  <h4><a href="https://docs.google.com/document/d/15jYrlla6pjlcr9SiJWj79s5vjL0jhwb6wCgm3_KAT1E/edit?usp=sharing">Lab 2 - Section 3 v2</a></h4>
-	  
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSJLSFLB_gaup4qzBWj8XcliGz6HJZ6YwL0_iCpGKNQhtzZovdTkeWNqBsMV-LHD1hZXW40-3r5adLX/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
+
+  <!-- The original way -->	  
   <h3>Lab 3 & 4 - User Manual</h3>
   <h4><a href="https://github.com/MonarchCourseExplorer/Prototype/wiki/" target="_blank">User Manual - Lab 3 & 4</a></h4>
+
+  <!-- The Iframe way -->
+  <h3>Lab 3 & 4 - User Manual</h3>
+  <iframe src=" https://github.com/MonarchCourseExplorer/Prototype/wiki" frameborder="0" width="960" height="569"></iframe>
+	  
+  
+
+
   	  
   <!--
   from google	  
